# stereotyping

./: Cargo.toml  README.md
src/: main.rs
src/stereotype/: file_stereotype.rs  mod.rs  stereotyper.rs
